# disk-crawler

./: .hgignore  BaseDecoder.cpp  BaseDecoder.h  Buffer.h  CMakeLists.txt  DiskWalker.cpp  DiskWalker.h  FATFileStream.cpp  FATFileStream.h  FATWalker.cpp  FATWalker.h  FSWalker.cpp  PlainDecoder.cpp  PlainDecoder.h  README  ZipDecoder.cpp  ZipDecoder.h  crawler.kdev4  main.cpp  types.h  utility.h
.kdev4/: _custom.kdev4  crawler.kdev4
base/: BaseDecoder.cpp  BaseDecoder.h  Bitmap.cpp  Bitmap.h  Buffer.cpp  Buffer.h  ByteReader.h  CMakeLists.txt  Config.cpp  Config.h  ExtFileStream.cpp  ExtFileStream.h  FATFileStream.cpp  FATFileStream.h  FATWalker.cpp  FATWalker.h  FSFileStream.cpp  FSFileStream.h  FSWalker.cpp  FSWalker.h  INode.cpp  INode.h  Log.cpp  Log.h  OverlapBuffer.cpp  OverlapBuffer.h  PlainDecoder.cpp  PlainDecoder.h  PlainFileStream.cpp  PlainFileStream.h  PlainWalker.cpp  PlainWalker.h  SignatureWalker.cpp  SignatureWalker.h  ZipDecoder.cpp  ZipDecoder.h  cmdopts.cpp  cmdopts.h  fspick.cpp  fspick.h  (+4 more)
fat/: Buffer.h  CMakeLists.txt  FATFileStream.cpp  FATFileStream.h  FATWalker.cpp  FATWalker.h  FSFileStream.cpp  FSFileStream.h  FSWalker.cpp  FSWalker.h  PlainDecoder.cpp  PlainDecoder.h  fat.kdev4  main.cpp
test/: BufferTest.cpp  BufferTest.h  CMakeLists.txt  SearchTest.cpp  SearchTest.h  Tests.h  tests.cpp
walker/: .kdev_include_paths  CMakeLists.txt  DiskWalker.cpp  DiskWalker.h  main.cpp  walker.kdev4
